<?xml version="1.0"?>
<package format="1">
  <name>surround_view_sim</name>
  <version>0.0.0</version>
  <description>The surround_view_sim package</description>

  <maintainer email="changkun@momenta.ai">changkun</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>cv_bridge</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models/"/>
  </export>
</package>
